examples/test/testpolicy14414.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14414
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key22: value30
      key28: value49
      key24: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value25
          key21: value24
          key0: value10
      podSelector:
        matchLabels:
          key44: value42
          key23: value20
          key29: value25
